syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "../proto";

service User {
    //获取用户列表
    rpc GetUserList(PageInfo) returns (UserListResponse);
    //通过手机号码查询用户
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);
    //通过ID查询用户
    rpc GetUserById(IDRequest) returns (UserInfoResponse);
    //添加用户
    rpc AddUser(AddUserRequest) returns (UserInfoResponse);
    //更新用户
    rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
    //检查密码
    rpc CheckPassword(CheckPasswordRequest) returns (CheckResponse);
}
//请求
message PageInfo {
    uint32 pn = 1;
    uint32 pSize = 2;
}

message MobileRequest {
    string mobile = 1;
}

message IDRequest {
    int32 id = 1;
}

message AddUserRequest {
    string password = 1;
    string mobile = 2;
    string nickname = 3;
}

message UpdateUserRequest {
    int32 id = 1;
    string nickname = 2;
    uint64 birthday = 3;
    int32  gender = 4;
}

message CheckPasswordRequest {
    string password = 1;
    string encryptedPwd = 2;
}

//返回
message UserInfoResponse {
    int32 id = 1;
    string password = 2;
    string mobile = 3;
    string nickname = 4;
    int32  gender = 5;
    uint64 birthday = 6;
    int32  role = 7;
}

message UserListResponse {
    int32 total = 1;
    repeated UserInfoResponse data = 2;
}

message CheckResponse {
    bool success = 1;
}